--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
             <div class="banner-text">
-               <h2 class="responsive-headline" style="color: #fff">I'm Khin Wah Wah Myat.</h2>
+               <h2 class="responsive-headline" style="color: #ffffff">I'm Khin Wah Wah Myat.</h2>
                <h3>I'm android developer from Myanmar.<br>
                   Let's <a class="smoothscroll" href="#about">start scrolling</a>
                   and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
@@ -99,7 +99,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic w3-animate-fading" src="images/myprofile.jpg" alt="" />
+            <img class="profile-pic w3-animate-fading" src="images/me.jpeg" alt="" />
 
          </div>
 
@@ -107,16 +107,25 @@
 
             <h2 style="color: black">About Me</h2>
 
-            <p style="font-family:'Times New Roman', Times, serif;font-size:16px;font-style:italic; font-size: 1.5ch">
-               I graduated from Yadanarpon Cyber City (YCC).
-               I made three projects as I mention below at my university.
-               After graduated, I started on job training at 72 Coder Company about one month.
-               I made one freelance project in one week.
-               I worked as a Junior Android Developer at Trustinno Company.
-               I have not only technical knowledge but also project management knowledge.
-               I am worked as a Junior Android Developer at MyanCare Company.
-               I am currently working at Justlogin (Myanmar)Co., Ltd.
-               I work as a freelancer too.
+            <p style="font-family:'Times New Roman', Times, serif;font-size:16px;font-style:italic; font-size: 2.0ch">
+               I graduated Master Degree from University of Computer Studies, Yangon (UCSY).
+               I got <b><i>Diploma in Java Programming Course & Diploma in Wireless and Mobile Computing Course</i></b> at
+               2012.
+               I made two projects "ONLINE CD SHOPPING SYSTEM" and "DUEL MOBILE GAME SYSTEM" while I am attending
+               diploma courses.
+               As a result, I received "3rd Best Project Award" and "1st Best Project Award".
+               I started as "Junior Java Programmer" at "Acroquest Myanmar Co.,Ltd" from 2012 to 2013. After one year
+               later, I joined the "United Amara Bank".
+               I have been worked there as "Assistant Software Engineer" nearly five years. I resigned from UAB Bank at
+               2018 and I moved to "2C2P Myanmar
+               Co.,Ltd" as "Senior Quality Assurance" position. I left from 2C2P Myanmar Co.,Ltd at 2019. Currenlty , I
+               am working
+               "Senior Quality Assurace" at "Just Login Myanmar Co.,Ltd".
+
+
+
+
+
             </p>
 
             <div class="row">
@@ -207,7 +216,7 @@
 
       </div> <!-- End Education -->
 
-       <!-- Education
+      <!-- Education
       ----------------------------------------------- -->
       <div class="row education">
 
@@ -398,136 +407,7 @@
       </div> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
-
-   <!-- Portfolio Section
-   ================================================== -->
-   <section id="portfolio" style="background: #3e3e3e">
-
-      <div class="row">
-
-         <div class="twelve columns collapsed">
-
-            <h1>Check Out Some of My Works.</h1>
-
-            <!-- portfolio-wrapper -->
-            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
-
-               <div class="columns portfolio-item w3-animate-fading">
-                  <a href="https://play.google.com/store/apps/details?id=com.myancare" title="" target="_blank">
-                     <div class="item-wrap">
-
-                        <!-- <a href="#modal-01" title=""> -->
-                        <img alt="" src="images/portfolio/myancare.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>MyanCare</h5>
-                              <p>Android</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                        <!-- </a> -->
-
-                     </div>
-               </div> <!-- item end -->
-
-               <div class="columns portfolio-item w3-animate-fading">
-
-                  <a href="https://play.google.com/store/apps/details?id=com.myancaredoctor" title="" target="_blank">
-                     <div class="item-wrap">
-
-                        <img alt="" src="images/portfolio/myancaredoctor.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>MyanCare for Doctor</h5>
-                              <p>Android</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                        <!-- </a> -->
-
-                     </div>
-               </div> <!-- item end -->
-
-               <div class="columns portfolio-item w3-animate-fading">
-                  <div class="item-wrap">
-
-                     <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/jobready365.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>JobReady365</h5>
-                              <p>Android</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                        <!-- </a> -->
-
-                  </div>
-               </div> <!-- item end -->
-
-               <div class="columns portfolio-item w3-animate-fading">
-                  <a href="https://play.google.com/store/apps/details?id=skylark.saung.merchant" title=""
-                     target="_blank">
-                     <div class="item-wrap">
-
-                        <!-- <a href="#modal-04" title=""> -->
-                        <img alt="" src="images/portfolio/merchant.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Hohodidi Merchant</h5>
-                              <p>Android</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                        <!-- </a> -->
-
-                     </div>
-               </div> <!-- item end -->
-
-               <div class="columns portfolio-item w3-animate-fading">
-                  <a href="https://play.google.com/store/apps/details?id=skylark.saung.hohodidi" title=""
-                     target="_blank">
-                     <div class="item-wrap">
-                        <!-- <a href="#modal-05" title=""> -->
-                        <img alt="" src="images/portfolio/client.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Hohodidi</h5>
-                              <p>Android</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                        <!-- </a> -->
-
-                     </div>
-               </div> <!-- item end -->
-
-               <div class="columns portfolio-item w3-animate-fading">
-                  <div class="item-wrap">
-
-                     <a href="#modal-06" title="">
-                        <img alt="" src="images/portfolio/jobcenter.png">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>MyanmarJobCenter</h5>
-                              <p>Android</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                        <!-- </a> -->
-
-                  </div>
-               </div> <!-- item end -->
-
-            </div> <!-- portfolio-wrapper end -->
-
-         </div> <!-- twelve columns end -->
-      </div> <!-- row End -->
-
-   </section> <!-- Portfolio Section End-->
-
-
-
+  
    <!-- footer
    ================================================== -->
    <footer>
