--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="banner-text">
                <h2 class="responsive-headline" style="color: #ffffff">I'm Khin Wah Wah Myat.</h2>
-               <h3>I'm android developer from Myanmar.<br>
+               <h3>I'm software quality assurance from Myanmar.<br>
                   Let's <a class="smoothscroll" href="#about">start scrolling</a>
                   and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
                <hr />
