--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
             <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Work</a></li>
+            <!-- <li><a class="smoothscroll" href="#portfolio">Work</a></li> -->
          </ul> <!-- end #nav -->
       </nav> <!-- end #nav-wrap -->
 
@@ -109,8 +109,7 @@
 
             <p style="font-family:'Times New Roman', Times, serif;font-size:16px;font-style:italic; font-size: 2.0ch">
                I graduated Master Degree from University of Computer Studies, Yangon (UCSY).
-               I got <b><i>Diploma in Java Programming Course & Diploma in Wireless and Mobile Computing Course</i></b> at
-               2012.
+               On the other hands, I got <b><i>Diploma in Java Programming Course & Diploma in Wireless and Mobile Computing Course</i></b> from India-Myanmar Center for Enhancement of IT Skills (IMCEITS) at 2012.
                I made two projects "ONLINE CD SHOPPING SYSTEM" and "DUEL MOBILE GAME SYSTEM" while I am attending
                diploma courses.
                As a result, I received "3rd Best Project Award" and "1st Best Project Award".
@@ -388,25 +387,25 @@
 
       <!-- Skills
       ----------------------------------------------- -->
-      <div class="row skill">
+      <!-- <div class="row skill"> -->
 
-         <div class="three columns header-col">
-            <h1><span>Skills</span></h1>
-         </div>
+         <!-- <div class="three columns header-col"> -->
+            <!-- <h1><span>Skills</span></h1> -->
+         <!-- </div> -->
 
-         <div class="nine columns main-col">
-            <span><i class="fa fa-code"></i> Android</span><br>
-            <span><i class="fa fa-code"></i> Java</span><br>
-            <span><i class="fa fa-code"></i> Kotlin</span><br>
-            <span><i class="fa fa-code"></i> Java</span><br>
-            <span><i class="fa fa-code"></i> SDLC</span><br>
-            <span><i class="fa fa-code"></i> Project Managment</span><br>
+         <!-- <div class="nine columns main-col"> -->
+            <!-- <span><i class="fa fa-code"></i> Android</span><br> -->
+            <!-- <span><i class="fa fa-code"></i> Java</span><br> -->
+            <!-- <span><i class="fa fa-code"></i> Kotlin</span><br> -->
+            <!-- <span><i class="fa fa-code"></i> Java</span><br> -->
+            <!-- <span><i class="fa fa-code"></i> SDLC</span><br> -->
+            <!-- <span><i class="fa fa-code"></i> Project Managment</span><br> -->
 
-         </div> <!-- main-col end -->
+         <!-- </div> main-col end -->
 
-      </div> <!-- End skills -->
+      <!-- </div> End skills -->
 
-   </section> <!-- Resume Section End-->
+   <!-- </section> Resume Section End -->
   
    <!-- footer
    ================================================== -->
